--- a/style.css
+++ b/style.css
@@ -8,20 +8,15 @@ h1 {
     vertical-align: middle;
 }
 
-p {
-
-    
-}
 
 body {
-  //  background-image: url("https://cdn.pixabay.com/photo/2021/09/22/05/06/city-6645646_960_720.jpg");
-    background-color: rgb(240, 240, 240);
-    width: 600px;
+
+    background-image: url(./img/diamond_upholstery.png);
+    width: 900px;
 }
 
 h2 {
     color: rgb(19, 17, 17);
-
 }
 
 #paragraph {
@@ -38,14 +33,23 @@ h3 {
 }
 
 h4 {
-    color: rgb(35, 35, 194);
+    color: rgb(49, 49, 201);
     font-size: 23px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h5 {
+    font-size: 25px;
+    color:rgba(5, 1, 1, 0.753)
+
+
 }
 
 #hd {
     color: rgb(19, 17, 17);
     font-size: 24px;
+    display:flex;
+    width: 1050px;
     
 }
 
@@ -67,7 +71,7 @@ nav {
 
 
 a {
-    color: rgb(76, 91, 95);
+    color: rgba(43, 22, 22, 0.932);
 }
 
 a:hover {
@@ -90,8 +94,8 @@ a:hover {
 }
 
 .annonsbilder {
-    width: 250px;
-    height: 150px;
+    width: 400px;
+    height: 250px;
 }
 
 
@@ -103,15 +107,16 @@ a:hover {
 
 th {
     padding: 20px;
-    border-width: 2px;
+    border-width: 1px;
     
 }
 
 td {
     vertical-align: top;
     padding: 20px;
-    border-width: 2px;
+    border-width: 1px;
     border-right-style: solid;
+    
 }
 
 
@@ -124,3 +129,46 @@ table, th, td {
     
 }
 
+#objectpic {
+    width: 500px;
+    height: 350px;
+}
+
+#welcometext {
+
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+
+}
+
+
+#marketlist {
+
+    
+
+
+}
+
+
+li {
+
+    display: flex;
+    padding: 10px;
+    margin: 10px;
+    border: 10px;
+
+}
+
+h6 {
+
+    font-size: 19px;
+    font-family:'Courier New', Courier, monospace;
+    padding: 10px;
+    margin-top: 2px;
+    margin-left: 10px;
+    margin-bottom:10px;
+    width:800px;
+    justify-content: right;
+}
